--- a/nav_manifest.json
+++ b/nav_manifest.json
@@ -1,4 +1,5 @@
 {
     "index.html": "Home",
-    "StopAndSearch.html": "Day 1 - A Year of Stop and Search"
+    "StopAndSearch.html": "Day 1 - A Year of Stop and Search",
+    "Lines.html": "Day 2 - UK Railways"
 }
