--- a/nav_manifest.json
+++ b/nav_manifest.json
@@ -1,5 +1,6 @@
 {
     "index.html": "Home",
     "StopAndSearch.html": "Day 1 - A Year of Stop and Search",
-    "Lines.html": "Day 2 - UK Railways"
+    "Lines.html": "Day 2 - UK Railways",
+    "StopAndSearchDensity.html": "Day 3 - Stop and Search per Capita"
 }
