--- a/nav_manifest.json
+++ b/nav_manifest.json
@@ -2,5 +2,6 @@
     "index.html": "Home",
     "StopAndSearch.html": "Day 1 - A Year of Stop and Search",
     "Lines.html": "Day 2 - UK Railways",
-    "StopAndSearchDensity.html": "Day 3 - Stop and Search per Capita"
+    "StopAndSearchDensity.html": "Day 3 - Stop and Search per Capita",
+    "D&DMaps.html": "Day 4 - D&D Maps"
 }
