Add day 5 - soil

--- a/nav_manifest.json
+++ b/nav_manifest.json
@@ -3,5 +3,6 @@
     "StopAndSearch.html": "Day 1 - A Year of Stop and Search",
     "Lines.html": "Day 2 - UK Railways",
     "StopAndSearchDensity.html": "Day 3 - Stop and Search per Capita",
-    "D&DMaps.html": "Day 4 - D&D Maps"
+    "D&DMaps.html": "Day 4 - D&D Maps",
+    "Soil.html": "Day 5 - Crowdsourced Soil Photos"
 }
