Add day 6 flatland

--- a/nav_manifest.json
+++ b/nav_manifest.json
@@ -4,5 +4,6 @@
     "Lines.html": "Day 2 - UK Railways",
     "StopAndSearchDensity.html": "Day 3 - Stop and Search per Capita",
     "D&DMaps.html": "Day 4 - D&D Maps",
-    "Soil.html": "Day 5 - Crowdsourced Soil Photos"
+    "Soil.html": "Day 5 - Crowdsourced Soil Photos",
+    "Flatland.html": "Day 6 - Flat Earth"
 }
