--- a/nav_manifest.json
+++ b/nav_manifest.json
@@ -5,5 +5,6 @@
     "StopAndSearchDensity.html": "Day 3 - Stop and Search per Capita",
     "D&DMaps.html": "Day 4 - D&D Maps",
     "Soil.html": "Day 5 - Crowdsourced Soil Photos",
-    "Flatland.html": "Day 6 - Flat Earth"
+    "Flatland.html": "Day 6 - Flat Earth",
+    "driving.html": "Day 7 - Drivable Neighbourhood"
 }
